--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -170,7 +170,7 @@ div.vera-bordered-social-icons {
 
 .entry-header .wp-post-image {
     width: 100%;
-    min-width: 960px;
+    //min-width: 960px;
     max-width: 1440px;
     height: 450px;
     object-fit: cover;
