--- a/sass/theme/_single_blog_page.scss
+++ b/sass/theme/_single_blog_page.scss
@@ -1,5 +1,5 @@
 .single-blog-title {
-  font-size: 56px;
+  font-size: 4rem;
   font-family: BebasNeue;
   text-transform: uppercase;
   letter-spacing: 1.5px;
